<?xml version="1.0" encoding="utf-8"?>
<be.appreciate.buttonsforcleaners.views.BoundedLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:padding="@dimen/general_fragment_padding"
    app:boundedWidth="@dimen/general_content_max_width">

    <be.appreciate.buttonsforcleaners.views.WrappingImageView
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginBottom="@dimen/login_logo_margin_bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_domain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_domain_hint"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <be.appreciate.buttonsforcleaners.views.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_domain_suffix"
            style="@style/Bfc.TextView.FakeEditText"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <be.appreciate.buttonsforcleaners.views.Button
        android:id="@+id/button_logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_action"/>

</be.appreciate.buttonsforcleaners.views.BoundedLinearLayout>